# sentinel

./: .gitignore  go.mod  pyproject.toml
app/: models.py
app/core/: config.py  db.py
cmd/sentinel/: main.go
internal/db/: db.go
internal/db/migrations/: 20260225033220_add_endpoints_table.sql  20260227044537_add_status_table.sql
internal/endpoint/: endpoint.go  model.go
internal/monitoring/: model.go  status.go
internal/server/: server.go
