[project]
name = "sentinel"
version = "0.1.0"
description = ""
authors = [
    {name = "Enzo",email = "enzo.mendez315@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [
    { include = "app" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
