[project]
name = "sentinel"
version = "0.1.0"
description = ""
authors = [
    {name = "Enzo",email = "enzo.mendez315@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.124.4,<0.125.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "aiosqlite (>=0.22.0,<0.23.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "app" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
